--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resourses__link">
+          <a href="#" class="resources__link">
             <img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo">
           </a>
-          <a href="#" class="resourses__link">
+          <a href="#" class="resources__link">
             <img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo">
           </a>
-          <a href="#" class="resourses__link">
+          <a href="#" class="resources__link">
             <img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo">
           </a>
-          <a href="#" class="resourses__link">
+          <a href="#" class="resources__link">
             <img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo">
           </a>
         </div>
