--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <!-- <link rel="stylesheet" href="./styles/normalize.css"> -->
-  <link rel="stylesheet" href="./page/index.css">
+  <!-- DONE Неиспользуемый код лучше удалить -->
+  
+  <!-- DONE Папка должна называться pages -->
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -18,7 +20,8 @@
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
           class="header__link">Узнать &rarr;</a>
       </p>
-      <div class="header__main-illustration"></div>
+      <!-- DONE Эта картинка является контентным изображением, поэтому лучше вставить её через тег <img>. -->
+      <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -77,25 +80,25 @@
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
           </li>
-          <li class="cards__item">
-            <!-- <img src="" alt="" class="cards__image"> -->
-            <!-- <h3 class="cards__title"></h3> -->
-            <p class="cards__description"></p>
-          </li>
+          <!-- DONE Пустой элемент нужно удалить. Для регулирования положения элементов в сетке используйте css.
+Можно использовать отступы margin или flex-свойство gap: https://doka.guide/css/gap/#primer-s-fleksami -->
         </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="Джош Кауфман. Как выучить всё. Видео на YouTube"
+        <!-- DONE Для увеличения семантики видео можно выстроить списком <ul>. Для <li> можно задать свой класс в соответствии с БЭМ, если понадобится -->
+        <!-- DONE Атрибуты width и height нужно убрать из html, по БЭМ вся стилизация должна быть описана в классе элемента -->
+
+        <ul class="video__iframes">
+          <li><iframe src="https://www.youtube.com/embed/5MgBikgcWnY" title="Джош Кауфман. Как выучить всё. Видео на YouTube"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen class="video__iframe"></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="Тим Урбан: внутренние мысли мастера прокрастинации"
+            allowfullscreen class="video__iframe"></iframe></li>
+          <li><iframe src="https://www.youtube.com/embed/arj7oStGLkU" title="Тим Урбан: внутренние мысли мастера прокрастинации"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen class="video__iframe"></iframe>
-        </div>
+            allowfullscreen class="video__iframe"></iframe></li>
+        </ul>
       </section>
 
       <section class="oakley">
@@ -233,20 +236,14 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo">
-          </a>
-        </div>
+        <!-- DONE Логотипы можно оформить списком <ul>. Для <li> в таком случае допускается создание своего класса, названного по БЭМ, если он будет необходим. -->
+
+        <ul class="resources__logo-zone">
+          <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo"></a></li>
+        </ul>
       </section>
       
     </main>
